--- a/src/components/style.css
+++ b/src/components/style.css
@@ -7,6 +7,10 @@
   .m-a-1{
     margin-right: 10px;
   }
+
+  .judul-a-gambar{
+    margin: 4px;
+  }
   
   /* For the .col-a class */
   .col-a {
@@ -22,6 +26,11 @@
     flex: 0 0 16.666667%; /* Adjust flex as needed */
     max-width: 16.666667%; /* Adjust max-width as needed */
     /* Add other styling as needed */
+    align-items: center;
+    text-align: center;
+  }
+  .border-a-bottom{
+    border-bottom: 1px solid #6c757d;
   }
   
   /* For the .col-a-sm-10 class */
@@ -40,6 +49,20 @@
   
   /* For the .form-a-control class */
   .form-a-control {
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    /* Add other styling as needed */
+  }
+  .form-a-purple {
     display: block;
     width: 100%;
     padding: 0.375rem 0.75rem;
@@ -85,6 +108,12 @@
     outline: 0;
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25); /* Adjust focus box shadow as needed */
   }
+
+  .form-a-purple:focus {
+    border-color: #9500ff; /* Adjust focus border color as needed */
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(132, 0, 255, 0.25); /* Adjust focus box shadow as needed */
+  }
   
   .form-a-group .form-a-control::placeholder {
     color: #6c757d; /* Adjust placeholder color as needed */
@@ -129,6 +158,29 @@
     color: #fff; /* Adjust text color as needed */
     /* Add other styling as needed */
   }
+
+  .btn-a-purple {
+    background: #8b51bd; /* Background color gradient */
+    color: #fff; 
+    padding: 10px;
+    border: none; 
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+
+  .send-a-button{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border:2px solid rgb(234, 233, 233);
+
+  }
+
+  .btn-a-purple:hover {
+    opacity: 80%;
+    box-shadow: 0 0 0 0.1rem rgba(132, 0, 255, 0.25);
+  }
   
   .btn-a-primary:hover {
     background-color: #0056b3; /* Adjust hover background color as needed */
@@ -149,4 +201,153 @@
     justify-content: center;
     height: 100vh; /* Optional: Set the height to 100% of the viewport height for vertical centering */
   }
+  .text-a-right{
+    text-align: right;
+  }
+
+  .love-checkbox {
+    display: inline-block;
+    position: relative;
+  }
+
+  .love-checkbox input {
+    appearance: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 40px; /* Sesuaikan dengan lebar checkbox */
+    height: 40px; /* Sesuaikan dengan tinggi checkbox */
+    opacity: 0;
+    cursor: pointer;
+    margin:0;
+  }
+
+  .love-checkbox .heart {
+    /* display: inline-block; */
+    width: 30px; /* Sesuaikan dengan lebar hati */
+    height: 10px; /* Sesuaikan dengan tinggi hati */
+    font-size: 30px; /* Sesuaikan ukuran font hati */
+    color: black; /* Warna hati ketika belum dicentang */
+    transition: color 0.3s; 
+  }
+
+  .love-checkbox input:checked + .heart {
+    color: red; /* Warna hati ketika dicentang */
+  }
+
+  .dropdown {
+    position: relative;
+  }
   
+  .dropdown-menu {
+    position: absolute;
+    top: 100%;
+    z-index: 3;
+    display: flex;
+    flex-direction: column;
+    background-color: #fff; /* Warna latar belakang dropdown */
+    border: 1px solid #ddd; /* Garis pembatas dropdown */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Bayangan dropdown */
+    padding: 8px;
+  }
+  
+  .dropdown-menu li {
+    list-style: none;
+    padding: 8px;
+  }
+  
+  .dropdown-menu li a {
+    text-decoration: none;
+    color: #333; /* Warna teks link dropdown */
+    display: block;
+  }
+  
+  .dropdown-menu li a:hover {
+    background-color: #f5f5f5; /* Warna latar belakang saat hover */
+  }
+
+  .ProfileContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.Profile {
+  text-align: center;
+}
+
+.Profile img{
+  width:120px;
+  border:3px solid #8b51bd;
+  border-radius: 50%;
+}
+
+.Profile h1{
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.MenuContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.Menu {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.Menu a {
+  padding: 10px 0px;
+  margin: 0 20px;
+  font-size: 16px;
+  color: #262626;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.Menu a:hover {
+  border-bottom: 2px solid #8b51bd;
+}
+
+.Menu a.active {
+  border-bottom: 2px solid #8b51bd;
+}
+
+.ContainerContent {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+* {
+  box-sizing: border-box;
+}
+
+
+.foto,
+.album {
+  display: none;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 100%;
+}
+
+.foto.active,
+.album.active {
+  display: block;
+}
+
+.foto {
+  background-color: #f2f2f2;
+}
+
+.album {
+  background-color: #e6e6e6;
+}
+
