--- a/src/components/style.css
+++ b/src/components/style.css
@@ -162,10 +162,7 @@
   .btn-a-purple {
     background: #8b51bd; /* Background color gradient */
     color: #fff; 
-    padding: 10px;
-    border: none; 
-    border-radius: 5px;
-    cursor: pointer;
+
     transition: 0.3s;
   }
 
@@ -205,35 +202,99 @@
     text-align: right;
   }
 
-  .love-checkbox {
-    display: inline-block;
+  .heart-bungkus{
+    padding: 10px;
+    align-items: center;
+    border-radius: 50%;
+    border: 3px solid rgb(255, 91, 137);
+  }
+
+  .heart-container {
+    --heart-color: rgb(255, 91, 137);
     position: relative;
+    width: 30px;
+    height: 30px;
+    transition: .3s;
   }
-
-  .love-checkbox input {
-    appearance: none;
+  
+  .heart-container .checkbox {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 40px; /* Sesuaikan dengan lebar checkbox */
-    height: 40px; /* Sesuaikan dengan tinggi checkbox */
+    width: 100%;
+    height: 100%;
     opacity: 0;
+    z-index: 20;
     cursor: pointer;
-    margin:0;
   }
-
-  .love-checkbox .heart {
-    /* display: inline-block; */
-    width: 30px; /* Sesuaikan dengan lebar hati */
-    height: 10px; /* Sesuaikan dengan tinggi hati */
-    font-size: 30px; /* Sesuaikan ukuran font hati */
-    color: black; /* Warna hati ketika belum dicentang */
-    transition: color 0.3s; 
+  
+  .heart-container .svg-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-
-  .love-checkbox input:checked + .heart {
-    color: red; /* Warna hati ketika dicentang */
+  
+  .heart-container .svg-outline,
+          .heart-container .svg-filled {
+    fill: var(--heart-color);
+    position: absolute;
   }
+  
+  .heart-container .svg-filled {
+    animation: keyframes-svg-filled 1s;
+    display: none;
+  }
+  
+  .heart-container .svg-celebrate {
+    position: absolute;
+    animation: keyframes-svg-celebrate .5s;
+    animation-fill-mode: forwards;
+    display: none;
+    stroke: var(--heart-color);
+    fill: var(--heart-color);
+    stroke-width: 2px;
+  }
+  
+  .heart-container .checkbox:checked~.svg-container .svg-filled {
+    display: block
+  }
+  
+  .heart-container .checkbox:checked~.svg-container .svg-celebrate {
+    display: block
+  }
+  
+  @keyframes keyframes-svg-filled {
+    0% {
+      transform: scale(0);
+    }
+  
+    25% {
+      transform: scale(1.2);
+    }
+  
+    50% {
+      transform: scale(1);
+      filter: brightness(1.5);
+    }
+  }
+  
+  @keyframes keyframes-svg-celebrate {
+    0% {
+      transform: scale(0);
+    }
+  
+    50% {
+      opacity: 1;
+      filter: brightness(1.5);
+    }
+  
+    100% {
+      transform: scale(1.4);
+      opacity: 0;
+      display: none;
+    }
+  }
+  
 
   .dropdown {
     position: relative;
@@ -278,7 +339,6 @@
 
 .Profile img{
   width:120px;
-  border:3px solid #8b51bd;
   border-radius: 50%;
 }
 
