--- a/src/index.css
+++ b/src/index.css
@@ -63,8 +63,56 @@
 
 }
 
-.Footer{
-  margin-top: auto;
+.image-gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px; /* Menghilangkan spasi antara kolom */
 }
 
+.kolom-gambar {
+  flex-grow: 1;
+}
 
+.image-container {
+  width: 100%; /* Lebar gambar container */
+  padding: 0;
+  position: relative;
+  height: 200px;
+  cursor: pointer;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.image-container img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  vertical-align: middle;
+}
+
+.title {
+  color: black;
+  text-align: center;
+  padding: 5px;
+}
+
+.kolom-gambar-1 {
+  flex-grow: 1 1 auto;
+}
+
+.image-container-1 {
+  width: 206px; /* Lebar gambar container */
+  padding: 0;
+  position: relative;
+  height: 250px;
+  cursor: pointer;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.image-container-1 img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  vertical-align: middle;
+}
